# ai-trading-dashboard

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  BUILD.cmd  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODESPACES_FIX.md  CODESPACES_GUIDE.md  CONTRIBUTING.md  Cargo.toml  FINAL_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART_CODESPACES.md  README.md  TEST_REPORT.md  build.bat  package.json
.devcontainer/: post-create.sh
.github/workflows/: build.yml
docs/: METRICS.md  PAPER_TRADING_GUIDE.md  TROUBLESHOOTING.md
scripts/: build-with-defender-off.bat  check-project.ps1  fix-windows-defender-full.bat  fix-windows-defender.bat  push-to-github.bat  start-dev.ps1
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs  models.rs  websocket.rs  ws_server.rs
ui/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
ui/public/: tradingview.js
ui/src/: lib.rs  main.rs  state.rs  tauri_api.rs  websocket.rs
ui/src/components/: center_panel.rs  footer.rs  header.rs  left_panel.rs  mod.rs  right_panel.rs
ui/src/pages/: dashboard.rs
ui/styles/: main.css
