[package]
name = "desktop-dashboard-tauri"
version = "0.1.0"
description = "AI Trading Bot Desktop Dashboard"
edition = "2021"
rust-version = "1.75"

[lib]
name = "desktop_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1.35", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
dashmap = "5.5"
once_cell = "1.19"
tracing = "0.1"

uuid = { version = "1.6", features = ["v4"] }
tracing-subscriber = "0.3"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
